--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "algolia/algoliasearch-client-php": "^3.4",
         "barryvdh/laravel-ide-helper": "^3.1",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "ichtrojan/laravel-otp": "^2.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/scout": "^10.10",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "meilisearch/meilisearch-php": "^1.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
