--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/scout": "^10.10",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "meilisearch/meilisearch-php": "^1.9"
+        "meilisearch/meilisearch-php": "^1.9",
+        "php-open-source-saver/jwt-auth": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
