--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
         "meilisearch/meilisearch-php": "^1.9",
-        "php-open-source-saver/jwt-auth": "^2.3"
+        "php-open-source-saver/jwt-auth": "^2.3",
+        "symfony/http-client": "^7.1",
+        "symfony/mailgun-mailer": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
